--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "athenlabs-landing-page",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.4.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "postcss": "8.4.26",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  }
+	"name": "athenlabs-landing-page",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"dependencies": {
+		"next": "13.4.10",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "20.4.2",
+		"@types/react": "18.2.15",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.14",
+		"eslint": "8.45.0",
+		"eslint-config-next": "13.4.10",
+		"postcss": "8.4.26",
+		"prettier": "^3.0.0",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.1.6"
+	}
 }
