--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
+		"dayjs": "^1.11.9",
+		"lodash": "^4.17.21",
 		"next": "13.4.10",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"usehooks-ts": "^2.9.1"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.195",
 		"@types/node": "20.4.2",
 		"@types/react": "18.2.15",
 		"@types/react-dom": "18.2.7",
