--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"next": "13.4.10",
@@ -21,6 +22,8 @@
 		"autoprefixer": "10.4.14",
 		"eslint": "8.45.0",
 		"eslint-config-next": "13.4.10",
+		"eslint-config-prettier": "^8.8.0",
+		"husky": "^8.0.0",
 		"postcss": "8.4.26",
 		"prettier": "^3.0.0",
 		"tailwindcss": "3.3.3",
