--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"next": "13.4.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"usehooks-ts": "^2.9.1"
+		"usehooks-ts": "^2.9.1",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.195",
