--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"semi": false,
-	"printWidth": 100
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"pluginSearchDirs": false
 }
