--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
 	"cSpell.words": [
+		"Alicio",
 		"Athen",
 		"athenlabs",
 		"preinstall",
+		"Sardinha",
 		"tailwindcss",
 		"Usehooks"
 	],
