chore: added clsx and heroicons deps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
 		"preinstall",
 		"Sardinha",
 		"tailwindcss",
-		"Usehooks"
+		"Usehooks",
+    "clsx",
+    "heroicons"
 	],
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
