--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.0.18",
 		"axios": "^1.4.0",
+		"clsx": "^1.2.1",
 		"dayjs": "^1.11.9",
 		"lodash": "^4.17.21",
 		"next": "13.4.10",
