--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "13.4.10",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"sharp": "^0.32.3",
 		"usehooks-ts": "^2.9.1",
 		"zod": "^3.21.4"
 	},
